--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ p {
 /* hero section */
 
 #hero {
-  background-image: url(./assets/images/hero-bg.jpg);
+  background-image: url(../hero-bg.jpg);
   background-size: cover;
   background-position: top center;
   position: relative;
